# resellos

./: .editorconfig  .env.example  .gitignore  .mcp.json  CHANGELOG.md  Makefile  README.md  data_processing_manifest.yaml  docker-compose.yaml
backend/: alembic.ini  migrate_wawi.py  pyproject.toml
backend/alembic/: env.py
backend/src/: config.py  main.py
backend/src/application/commands/: create_item.py  delete_item.py  grant_consent.py  mark_item_listed.py  mark_item_sold.py  refresh_insights.py  revoke_consent.py  start_sourcing.py  update_item.py
backend/src/application/dto/: analytics_dto.py  insight_dto.py  item_dto.py  notification_dto.py  sourcing_dto.py  user_dto.py
backend/src/application/queries/: get_insights.py  get_item.py  get_sourcing_status.py  get_user_consents.py  list_items.py  list_notifications.py
backend/src/application/services/: perplexity_analysis_service.py
backend/src/domain/entities/: ai_insight.py  consent_record.py  item.py  notification.py  sourcing_result.py  user.py
backend/src/domain/repositories/: ai_insight_repository.py  consent_repository.py  item_repository.py  notification_repository.py  sourcing_result_repository.py  user_repository.py
backend/src/domain/services/: dead_stock_detector.py  profit_calculator.py  resell_score_calculator.py
backend/src/domain/value_objects/: condition.py  money.py  (+4 more)
backend/tests/: conftest.py
backend/tests/compliance/: test_gdpr_consent.py  test_gdpr_data_access.py  test_no_pii_in_logs.py
backend/tests/integration/: test_health.py
backend/tests/security/: test_auth_bypass.py
(+198 files in other folders)
